--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 <body>
     <div class="container">
         <div class="left">
-            <img src="logo.png" alt="Ekolojik Kredi Logo" class="logo">
+            <svg width="200" height="200" xmlns="http://www.w3.org/2000/svg">
+  <circle cx="100" cy="100" r="90" stroke="green" stroke-width="10" fill="lightgreen"/>
+  <text x="50%" y="50%" text-anchor="middle" fill="darkgreen" font-size="24" font-family="Arial" dy=".3em">♻️ Eko Kredi</text>
+</svg>
+
             <h1>Ekolojik Kredi</h1>
             <h2>Torbalı Anadolu Lisesi TÜBİTAK Projesi ve bu site örnektir</h2>
             <div class="side-menu">
