--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <a href="#geriDonusumNedir" onclick="showSection('geriDonusumNedir')">Geri Dönüşüm Nedir?</a>
                 <a href="#hazirlayanlar" onclick="showSection('hazirlayanlar')">Hazırlayanlar</a>
                 <a href="#dahaFazlaBilgi" onclick="showSection('dahaFazlaBilgi')">Daha Fazla Bilgi</a>
-                <a href="https://sifiratik.gov.tr/">Sıfır Atık</a>
+                <a href="https://youtube.com/@ekolojikkredi?si=kSOblmbcrR3P6vvM/">EKOLOJİKKREDİ</a>
                 <a href="mailto:ekolojikkreditubitak@gmail.com">Bize Ulaşın</a>
                 <a href="#ekolojikKrediSayaci" onclick="showSection('ekolojikKrediSayaci')">Toplam Atık Sayacı</a>
             </div>
