--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         </form>
         <div class="left-info" style="display: none;">
             <p>İsim: <span id="veriGoruntulemeIsim"></span></p>
-            <p>Ekolojik Kredi: <span id="veriGoruntulemePuan"></span></p>
+            <p>Puan: <span id="veriGoruntulemePuan"></span></p>
         </div>
         <div class="right-info" style="display: none;">
             <h3>Geçmiş Teslimler</h3>
@@ -120,12 +120,12 @@
                 <option value="kağıt">Kağıt</option>
                 <option value="plastik">Plastik</option>
                 <option value="cam">Cam</option>
-                                 <option value="metal">Metal</option>
+                <option value="metal">Metal</option>
                 <option value="elektronik atıklar">Elektronik Atıklar</option>
             </select>
             <input type="number" name="atikKutlesi" placeholder="Atık Kütlesi (kg)" required>
             <input type="text" name="teslimEden" placeholder="Teslim Eden" required>
-            <label for="hataliAyrisim">Hatalı Ayrıştırıldı mı?</label>
+                        <label for="hataliAyrisim">Hatalı Ayrıştırıldı mı?</label>
             <select name="hataliAyrisim" id="hataliAyrisim" required>
                 <option value="hayır">Hayır</option>
                 <option value="evet">Evet</option>
