--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="left">
             <svg width="200" height="200" xmlns="http://www.w3.org/2000/svg">
   <circle cx="100" cy="100" r="90" stroke="green" stroke-width="10" fill="lightgreen"/>
-  <text x="50%" y="50%" text-anchor="middle" fill="darkgreen" font-size="24" font-family="Arial" dy=".3em">♻️ Eko Kredi</text>
+  <text x="50%" y="50%" text-anchor="middle" fill="darkgreen" font-size="24" font-family="Arial" dy=".3em">♻️ EKOLOJİKKREDİ</text>
 </svg>
 
             <h1>Ekolojik Kredi</h1>
@@ -21,8 +21,8 @@
                 <a href="#nedir" onclick="showSection('nedir')">Ekolojik Kredi Nedir?</a>
                 <a href="#geriDonusumNedir" onclick="showSection('geriDonusumNedir')">Geri Dönüşüm Nedir?</a>
                 <a href="#hazirlayanlar" onclick="showSection('hazirlayanlar')">Hazırlayanlar</a>
-                <a href="#dahaFazlaBilgi" onclick="showSection('dahaFazlaBilgi')">Daha Fazla Bilgi</a>
-                <a href="https://youtube.com/@ekolojikkredi?si=kSOblmbcrR3P6vvM/">EKOLOJİKKREDİ</a>
+                <a href="#dahaFazlaBilgi" onclick="showSection('sıfıratık hakkında daha fazla bilgi için tıklayınız.')">Daha Fazla Bilgi</a>
+                <a href="https://youtube.com/@ekolojikkredi?si=kSOblmbcrR3P6vvM/">Ekolojikkredi hakkında daha fazla bilgi almak için tıklayınız.</a>
                 <a href="mailto:ekolojikkreditubitak@gmail.com">Bize Ulaşın</a>
                 <a href="#ekolojikKrediSayaci" onclick="showSection('ekolojikKrediSayaci')">Toplam Atık Sayacı</a>
             </div>
