--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </svg>
 
             <h1>Ekolojik Kredi</h1>
-            <h2>Torbalı Anadolu Lisesi TÜBİTAK Projesi ve bu site örnektir</h2>
+            <h2>TORBALI ANADOLU LİSESİ EKOLOJİK KREDİ TÜBİTAK PROJESİ ÖRNEK SİTESİ</h2>
             <div class="side-menu">
                 <a href="#nedir" onclick="showSection('nedir')">Ekolojik Kredi Nedir?</a>
                 <a href="#geriDonusumNedir" onclick="showSection('geriDonusumNedir')">Geri Dönüşüm Nedir?</a>
