--- a/index.html
+++ b/index.html
@@ -10,128 +10,83 @@
 <body>
     <div class="container">
         <div class="left">
-            <svg width="200" height="200" xmlns="http://www.w3.org/2000/svg">
-  <circle cx="100" cy="100" r="90" stroke="green" stroke-width="10" fill="lightgreen"/>
-  <text x="50%" y="50%" text-anchor="middle" fill="darkgreen" font-size="15" font-family="Arial" dy=".3em">♻️ Ekolojikkredi</text>
-</svg>
-
-            <h1>Ekolojik Kredi</h1>
-            <h2>TORBALI ANADOLU LİSESİ EKOLOJİK KREDİ TÜBİTAK PROJESİ ÖRNEK SİTESİ</h2>
+            <div class="logo">
+                <img src="logo.png" alt="Logo">
+                <h1>Ekolojik Kredi</h1>
+            </div>
             <div class="side-menu">
                 <a href="#nedir" onclick="showSection('nedir')">Ekolojik Kredi Nedir?</a>
                 <a href="#geriDonusumNedir" onclick="showSection('geriDonusumNedir')">Geri Dönüşüm Nedir?</a>
                 <a href="#hazirlayanlar" onclick="showSection('hazirlayanlar')">Hazırlayanlar</a>
-            
-                <a href="https://youtube.com/@ekolojikkredi?si=kSOblmbcrR3P6vvM/">Ekolojikkredi hakkında daha fazla bilgi için tıklayınız.</a>
-                <a href="mailto:ekolojikkreditubitak@gmail.com">Bize Ulaşın</a>
-                <a href="#ekolojikKrediSayaci" onclick="showSection('ekolojikKrediSayaci')">Toplam Atık Sayacı</a>
+                <a href="#ekolojikKrediSayaci" onclick="showSection('ekolojikKrediSayaci')">Toplam Atık Kilosu</a>
+                <a href="#bizeUlasin" onclick="showSection('bizeUlasin')">Bize Ulaşın</a>
             </div>
         </div>
         <div class="right">
-            <button onclick="showSection('kayit')" class="oval-btn">Kayıt Ol</button>
-            <button id="veriGoruntulemeButon" onclick="showSection('veriGoruntuleme')" class="oval-btn">Veri Görme</button>
-            <button onclick="showSection('komiteKayit')" class="oval-btn">Komite Üyeliği</button>
+            <div id="nedir" class="section">
+                <h2>Ekolojik Kredi Nedir?</h2>
+                <p>Ekolojik Kredi Projesi, çevre bilincini artırmak ve okullarda geri dönüşüm kültürünü geliştirmek amacıyla oluşturulmuştur.</p>
+            </div>
+            <div id="geriDonusumNedir" class="section">
+                <h2>Geri Dönüşüm Nedir?</h2>
+                <p>Geri dönüşüm, atık materyallerin toplanarak yeniden işlenmesi ve yeni ürünler oluşturulması sürecidir.</p>
+            </div>
+            <div id="hazirlayanlar" class="section">
+                <h2>Hazırlayanlar</h2>
+                <p>Danışman: Osman Onuk</p>
+                <p>Öğrenciler: Muhammedcan Arslanparçası, Yağız Efe Yılmaz, Bilal Yiğit Tezcan</p>
+            </div>
+            <div id="ekolojikKrediSayaci" class="section">
+                <h2>Toplam Atık Kilosu</h2>
+                <p>Toplam Ekolojik Puan: <span id="toplamPuan">0</span></p>
+                <p>Toplam Atık Miktarı: <span id="toplamAtik">0 kg</span></p>
+            </div>
+            <div id="bizeUlasin" class="section">
+                <h2>Bize Ulaşın</h2>
+                <p>Adres: İZMİR/TORBALI ANADOLU LİSESİ</p>
+                <p>Email: ekolojikkreditubitak@gmail.com</p>
+            </div>
+            <button class="oval-btn" onclick="showSection('veriGoruntuleme')">Veri Görme</button>
+            <button class="oval-btn" onclick="showSection('kayit')">Kayıt Ol</button>
+            <button class="oval-btn" onclick="showSection('veriGirisi')">Veri Girişi</button>
+            <div id="veriGoruntuleme" class="section">
+                <h2>Veri Görme</h2>
+                <form id="veriGoruntulemeForm">
+                    <input type="email" name="email" placeholder="Email" required>
+                    <input type="password" name="sifre" placeholder="Şifre" required>
+                    <button type="button" onclick="goruntule()">Verileri Gör</button>
+                </form>
+                <div class="left-info" style="display: none;">
+                    <p>İsim: <span id="veriGoruntulemeIsim"></span></p>
+                    <p>Ekolojik Puan: <span id="veriGoruntulemePuan"></span></p>
+                    <p>Toplam Atık Miktarı: <span id="veriGoruntulemeAtik"></span></p>
+                </div>
+            </div>
+            <div id="kayit" class="section">
+                <h2>Kayıt Ol</h2>
+                <form id="kayitForm">
+                    <input type="text" name="isim" placeholder="İsim" required>
+                    <input type="email" name="email" placeholder="Email" required>
+                    <input type="text" name="okul" placeholder="Okul" required>
+                    <input type="text" name="okul_numarasi" placeholder="Okul No" required>
+                    <input type="password" name="sifre" placeholder="Şifre" required>
+                    <button type="button" onclick="kayitOl()">Kayıt Ol</button>
+                </form>
+            </div>
+            <div id="veriGirisi" class="section">
+                <h2>Veri Girişi</h2>
+                <form id="veriGirisiForm">
+                    <input type="text" name="ogrenci_id" placeholder="Öğrenci ID" required>
+                    <input type="text" name="atik_turu" placeholder="Atık Türü" required>
+                    <input type="number" name="atik_kutlesi" placeholder="Atık Kütlesi (kg)" required>
+                    <select name="turune_ayrildi" required>
+                        <option value="hayir">Hayır</option>
+                        <option value="evet">Evet</option>
+                    </select>
+                    <button type="button" onclick="veriGirisi()">Veri Gir</button>
+                </form>
+            </div>
         </div>
-    </div>
-
-    <div id="nedir" class="section">
-        <h2>Ekolojik Kredi Nedir?</h2>
-        <p>Ekolojik Kredi Projesi, çevre bilincini artırmak ve okullarda geri dönüşüm kültürünü geliştirmek amacıyla oluşturulmuştur. Öğrenciler, atıkları türlerine göre ayrıştırarak puan toplar ve ödüller kazanır. Proje, Türkiye'nin sıfır atık hedeflerine ve doğal kaynakların korunmasına katkı sağlamayı amaçlar.</p>
-    </div>
-
-    <div id="geriDonusumNedir" class="section">
-        <h2>Geri Dönüşüm Nedir?</h2>
-        <p>Geri dönüşüm, atık materyallerin toplanarak yeniden işlenmesi ve yeni ürünler oluşturulması sürecidir. Bu süreç, doğal kaynakların korunmasını sağlar, enerji tasarrufu yapar ve çevre kirliliğini azaltır. Geri dönüşüm, aynı zamanda ekonomi için de faydalıdır çünkü yeni hammadde ihtiyacını azaltır ve atık yönetim maliyetlerini düşürür. Geri dönüşümün önemi günümüzde daha da artmıştır, çünkü dünya kaynakları hızla tükenmekte ve çevre kirliliği ciddi boyutlara ulaşmaktadır. Bu nedenle, geri dönüşüm alışkanlığı kazanmak ve bunu yaygınlaştırmak her bireyin sorumluluğudur.</p>
-        <p>Geri dönüşüm, cam, plastik, kağıt, metal gibi farklı materyaller için uygulanabilir. Her bir materyalin geri dönüşüm süreci farklıdır ancak genel olarak atıklar toplanır, ayrıştırılır ve yeniden işlenir. Bu süreçte, atıklar geri dönüşüm tesislerine gönderilir ve burada farklı işlemlerden geçerek yeniden kullanılabilir malzemeler haline getirilir. Geri dönüşüm, doğaya olan zararı azaltmak ve sürdürülebilir bir gelecek oluşturmak için kritik öneme sahiptir.</p>
-    </div>
-
-    <div id="hazirlayanlar" class="section">
-        <h2>Hazırlayanlar</h2>
-        <p>Danışman: Osman Onuk</p>
-        <p>Öğrenciler: Muhammedcan Arslanparçası, Yağız Efe Yılmaz, Bilal Yiğit Tezcan</p>
-    </div>
-
-    <div id="dahaFazlaBilgi" class="section">
-        <h2>Daha Fazla Bilgi</h2>
-        <p>Proje hakkında daha fazla bilgi için tıklayın: <a href="https://sifiratik.gov.tr/">Sıfır Atık</a></p>
-    </div>
-
-    <div id="ekolojikKrediSayaci" class="section">
-        <h2>Toplam Atık Sayacı</h2>
-        <p>Toplam Ekolojik Kredi: <span id="toplamKredi">0</span></p>
-    </div>
-
-    <div id="kayit" class="section">
-        <h2>Kayıt Ol</h2>
-        <form id="kayitForm">
-            <input type="email" name="email" placeholder="Email" required>
-            <input type="text" name="isim" placeholder="İsim" required>
-            <input type="text" name="okul" placeholder="Okul" required>
-            <input type="text" name="okulNumarasi" placeholder="Okul Numarası" required>
-            <input type="password" name="sifre" placeholder="Şifre" required>
-            <button type="submit">Kayıt Ol</button>
-        </form>
-    </div>
-
-    <div id="veriGoruntuleme" class="section">
-        <h2>Veri Görme</h2>
-        <form id="veriGoruntulemeForm">
-            <input type="email" name="email" placeholder="Email" required>
-            <input type="password" name="sifre" placeholder="Şifre" required>
-            <button type="submit">Verileri Gör</button>
-        </form>
-        <div class="left-info" style="display: none;">
-            <p>İsim: <span id="veriGoruntulemeIsim"></span></p>
-            <p>Puan: <span id="veriGoruntulemePuan"></span></p>
-        </div>
-        <div class="right-info" style="display: none;">
-            <h3>Geçmiş Teslimler</h3>
-            <ul id="gecmisTeslimler"></ul>
-        </div>
-    </div>
-
-    <div id="komiteKayit" class="section">
-        <h2>Komite Üyeliği</h2>
-        <form id="komiteKayitForm">
-            <input type="text" name="okul" placeholder="Okul" required>
-            <input type="text" name="il" placeholder="İl" required>
-            <input type="text" name="ilce" placeholder="İlçe" required>
-            <input type="password" name="sifre" placeholder="Şifre" required>
-            <button type="submit">Kayıt Ol</button>
-        </form>
-        <button onclick="showSection('komiteGiris')" class="oval-btn">Hesabım Var</button>
-    </div>
-
-    <div id="komiteGiris" class="section">
-        <h2>Komite Girişi</h2>
-        <form id="komiteGirisForm">
-            <input type="text" name="okul" placeholder="Okul" required>
-            <input type="password" name="sifre" placeholder="Şifre" required>
-            <button type="submit">Giriş Yap</button>
-        </form>
-    </div>
-
-    <div id="veriGirisiFormContainer" class="section" style="display: none;">
-        <h2>Veri Girişi</h2>
-        <form id="veriGirisiForm">
-            <input type="text" name="okulIsmi" placeholder="Okul İsmi" required>
-            <input type="text" name="okulNumarasi" placeholder="Okul Numarası" required>
-            <select name="atikTuru" required>
-                <option value="kağıt">Kağıt</option>
-                <option value="plastik">Plastik</option>
-                <option value="cam">Cam</option>
-                <option value="metal">Metal</option>
-                <option value="elektronik atıklar">Elektronik Atıklar</option>
-            </select>
-            <input type="number" name="atikKutlesi" placeholder="Atık Kütlesi (kg)" required>
-            <input type="text" name="teslimEden" placeholder="Teslim Eden" required>
-                        <label for="hataliAyrisim">Hatalı Ayrıştırıldı mı?</label>
-            <select name="hataliAyrisim" id="hataliAyrisim" required>
-                <option value="hayır">Hayır</option>
-                <option value="evet">Evet</option>
-            </select>
-            <button type="submit">Veri Gir</button>
-        </form>
     </div>
 </body>
 </html>
